--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<html>
+<head>
+  <TITLE>§26 проблемы формирования информационного общества</TITLE>
+  <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://sbookas.github.io/main.css">
+  </head>
+<body>
+  <h1 align="center">Сказки на ночь!</h1>
+<br><a href="/9klass/index1.html">Сказка 1</a> </br>
+  <br><a href="/8klass/index2.html">Сказка 2</a> </br>
+ <br><a href="/7klass/index3.html">Сказка 3</a> </br>
+  </body>
+  </html>
