--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
 <head>
-  <TITLE>§26 проблемы формирования информационного общества</TITLE>
+  <TITLE>Сказочки</TITLE>
   <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://sbookas.github.io/main.css">
+    <link rel="stylesheet" href="https://skazki.pered.snom.io/main.css">
   </head>
 <body>
   <h1 align="center">Сказки на ночь!</h1>
-<br><a href="/9klass/index1.html">Сказка 1</a> </br>
-  <br><a href="/8klass/index2.html">Сказка 2</a> </br>
- <br><a href="/7klass/index3.html">Сказка 3</a> </br>
+<br><a href="/Stihi/index1.html">Сказки в стихах</a> </br>
+  <br><a href="/Wolshebnie/index2.html">Волшебные сказки</a> </br>
+ <br><a href="/Shiwotnie/index3.html">Сказки о животных</a> </br>
+ <br><a href="/Nerusskie/index4.html">Сказки не русские</a> </br>
+ <br><a href="/Russkie/index4.html">Русские сказки</a> </br>
   </body>
   </html>
