--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://skazki.pered.snom.io/main.css">
   </head>
 <body>
-  background: url(https://yandex.ru/images/search?from=tabbar&text=картинка%20звёздного%20неба&pos=16&img_url=https%3A%2F%2Fget.wallhere.com%2Fphoto%2Fnight-galaxy-stars-Milky-Way-nebula-atmosphere-spiral-galaxy-astronomy-star-outer-space-astronomical-object-22388.jpg&rpt=simage)
+  background-image: url(https://get.wallhere.com/photo/night-galaxy-stars-Milky-Way-nebula-atmosphere-spiral-galaxy-astronomy-star-outer-space-astronomical-object-22388.jpg)
   <h3 align="center">Сказки на ночь!</h3>
 <br><a href="/Stihi/index1.html">Сказки в стихах</a> </br>
   <br><a href="/Wolshebnie/index2.html">Волшебные сказки</a> </br>
