--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
   background-image: url(nebo.jpg)
-  <h3 align="center">Сказки на ночь!</h3>
+  <h3 color="#DACBAD" align="center">Сказки на ночь!</h3>
 <br><a href="/Stihi/index1.html">Сказки в стихах</a> </br>
   <br><a href="/Wolshebnie/index2.html">Волшебные сказки</a> </br>
  <br><a href="/Shiwotnie/index3.html">Сказки о животных</a> </br>
