--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
     <link rel="stylesheet" href="https://skazki.pered.snom.io/main.css">
   </head>
-<body>
-  background-image= "nebo.png"
+<body background-image= "nebo.png">
   <h3 color="#DACBAD" align="center">Сказки на ночь!</h3>
 <br><a href="/Stihi/index1.html">Сказки в стихах</a> </br>
   <br><a href="/Wolshebnie/index2.html">Волшебные сказки</a> </br>
