--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
   <TITLE>Сказочки</TITLE>
+  <style>
+body { background: url(nebo.png); }
+</style>
   <meta charset="UTF-8">
     <link rel="stylesheet" href="https://skazki.pered.snom.io/main.css">
   </head>
-<body background-image= "nebo.png">
+<body>
   <h3 color="#DACBAD" align="center">Сказки на ночь!</h3>
 <br><a href="/Stihi/index1.html">Сказки в стихах</a> </br>
   <br><a href="/Wolshebnie/index2.html">Волшебные сказки</a> </br>
