--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body { background: url(nebo.png); }
 </style>
   <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://skazki.pered.snom.io/main.css">
+    <link rel="stylesheet" href="https://pozetivnik.github.io/skazki.pered.snom.io/main.css">
   </head>
 <body>
   <h3 color="#DACBAD" align="center">Сказки на ночь!</h3>
