--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <TITLE>Сказочки</TITLE>
   <style>
-body { background: url(nebo.png); }
+body { background: url(nebo.png); background-size: 100% 100%; background-repeat: no-repeat; }
 </style>
   <meta charset="UTF-8">
     <link rel="stylesheet" href="https://pozetivnik.github.io/skazki.pered.snom.io/main.css">
