--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body { background: url(nebo.png); background-size: 100% 100%; background-repeat:
     <link rel="stylesheet" href="https://pozetivnik.github.io/skazki.pered.snom.io/main.css">
   </head>
 <body>
-  <h3 color="#DACBAD" align="center">Сказки на ночь!</h3>
+  <h3 color="#DACBA0" align="center">Сказки на ночь!</h3>
 <br><a href="/Stihi/index1.html">Сказки в стихах</a> </br>
   <br><a href="/Wolshebnie/index2.html">Волшебные сказки</a> </br>
  <br><a href="/Shiwotnie/index3.html">Сказки о животных</a> </br>
