--- a/Nerusskie/Bremenskie/11.html
+++ b/Nerusskie/Bremenskie/11.html
@@ -37,14 +37,30 @@
 пригодились бы ей. Итак, они отправились в ту сторону, где мерцал огонек. Свет становился всё сильнее и сильнее, и, наконец, они пришли к ярко освещённому дому разбойников. 
 Осёл как самый высокий приблизился к окну и заглянул внутрь.
 <br><IMG SRC="b8.png" align="center"><br><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
-
-
-
-  
-  
-  
-  
-  
-  
+<p>&nbsp;&nbsp;&nbsp;- Что ты видишь, серый? – спросил петух.<br>
+<p>&nbsp;&nbsp;&nbsp; - Что я вижу? – ответил осёл. Накрытый стол с хорошей едой и питьём. А разбойники сидят вокруг и веселятся.<br>
+<p>&nbsp;&nbsp;&nbsp; - Это было бы не дурно и для нас, - сказал петух.<br>
+<p>&nbsp;&nbsp;&nbsp; - Да, да. Ах, если бы мы были там, - вздохнул осёл.<br>
+<p>&nbsp;&nbsp;&nbsp; Тогда они стали советоваться, как бы им выгнать разбойников. И, наконец, придумали. Осёл стал передними ногами на окно, собака вскочила на спину к 
+ослу, кошка взобралась на собаку, а петух взлетел на голову кошке. Когда это было сделано, они разом начали свою музыку. Осёл заревел, собака залаяла, кошка замяукала, 
+петух запел. Потом они бросились через окно в комнату. Так, что стёкла зазвенели.<br>
+<br><IMG SRC="b9.png" align="center"><br><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
+<p>&nbsp;&nbsp;&nbsp; Разбойники с ужасными воплями вскочили с мест. Они подумали, что к ним явилось приведение. И в великом страхе убежали в лес. Тогда четверо друзей уселись
+за стол и стали с удовольствие доедать всё, что осталось. Они ели так, как будто им надо было наесться на четыре недели. Покончив с едой, дальше музыканты погасили свет и 
+стали подыскивать себе место для отдыха. Каждый по своему вкусу и привычкам. Осёл улёгся во дворе на куче мусора, собака – за дверью, кошка – на очаге в тёплом месте, а петух
+уселся на насесте. А так как они устали очень после долгой дороги, то сей час же уснули. Когда миновала полночь и разбойники уже издали заметили, что в доме не горит свет и 
+всё как будто спокойно – атаман сказал:<br>
+<p>&nbsp;&nbsp;&nbsp;- Мы не должны были всё же позволить так запугать нас.<br>
+<p>&nbsp;&nbsp;&nbsp; И он велел одному из разбойников пойти и осмотреть дом. Посланный, убедившись, что всё спокойно, зашёл в кухню, чтобы зажечь огонь. А так как он принял, 
+сверкающие глаза кошки за тлеющие угли, то сунул туда спичку, чтобы добыть огоньку. Но кошка не любила шутить. Она кинулась на разбойника и вцепилась ему в лицо. Он ужасно
+испугался, бросился бежать и хотел было выскочить во двор, но собака, которая лежала за дверью, вскочила и укусила его за ногу. Когда он мчался через двор мимо мусорной кучи,
+осёл крепко лягнул его задней ногой. А петух, которого разбудил шум, бодро закричал с насеста.<br>
+<p>&nbsp;&nbsp;&nbsp; – Ку-ка-ре-ку.<br>
+<p>&nbsp;&nbsp;&nbsp; Разбойник пустился бежать изо всех сил к своему атаману. И сказал ему.<br>
+<p>&nbsp;&nbsp;&nbsp; - А, там в доме ужасная ведьма. Она зашипела на меня, исцарапала мне лицо своими длинными когтями. За дверью стоял человек с ножом, он ранил меня в ногу.
+Во дворе лежало чёрное чудовище, которое набросилось на меня с дубиной. А наверху на крыше сидит судья, он как закричит – «подавайте мне сюда этого мошенника». Тут уж я
+пустился бежать. С тех пор разбойники больше не решались подходить к дому. А четверым бременским музыкантам так понравилось в доме разбойников, что они остались там жить.<br>
+<br><IMG SRC="b10.png" align="center"><br><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
+<P ALIGN="center">Сладких снов!♥♥♥
   </body>
   </html>
