--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body { background: url(nebo.png); background-size: 100% 100%; background-repeat: no-repeat; }
 </style>
   <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://skazka.github.io/main.css">
+    <link rel="stylesheet" href="https://pozetivnik.github.io/skazki.pered.snom.github.io/main.css">
   </head>
 <body>
   <h3 color="#DACBA0" align="center">Сказки на ночь!</h3>
