Update and rename Nerusskie/index4.html to нерусские/index4.html

--- a/нерусские/index4.html
+++ b/нерусские/index4.html
@@ -2,7 +2,7 @@
 <HEAD>
 <meta charset = "utf-8">
 <meta name="description" content="Зарубежные">
-  <link rel="stylesheet" href="https://skazka.github.io/main.css">
+  <link rel="stylesheet" href="https://pozetivnik.github.io/skazki.pered.snom.github.io/main.css">
 <title>
 Зарубежные сказки
 </title>
