--- a/Nerusskie/Bremenskie/11.html
+++ b/Nerusskie/Bremenskie/11.html
@@ -2,7 +2,7 @@
 <head>
 <title>Бременские музыканты</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="https://skazka.github.io/main.css">
+<link rel="stylesheet" href="https://pozetivnik.github.io/skazki.pered.snom.github.io/main.css">
 </head>
 <body>
 <P ALIGN="center"><h3><b><i>Братья Гримм</i></b><BR><B>Бременские музыканты</B></h1><BR>
