--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body { background: url(nebo.png); background-size: 100% 100%; background-repeat:
 <br><a href="/Nerusskie/index1.html">Сказки в стихах</a> </br>
   <br><a href="/Russkie/index2.html">Волшебные сказки</a> </br>
  <br><a href="/Shiwotnie/index3.html">Сказки о животных</a> </br>
- <br><a href="/Nerusskie/index4.html">Сказки не русские</a> </br>
- <br><a href="/Russkie/index5.html">Русские сказки</a> </br>
+ <br><a href="/Stihi/index4.html">Сказки не русские</a> </br>
+ <br><a href="/Wolshebnie/index5.html">Русские сказки</a> </br>
   </body>
   </html>
